--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,42 +5,68 @@
  */
 
 /* You can override the default Infima variables here. */
-p, li, ul {
-	font-family: "Merriweather", serif;
-	font-size: 1.2rem;
-	line-height: 1.7rem;
- }
-
-:root { 
-	--ifm-color-primary:#ba7402;
---ifm-color-primary-dark: #ef9603;
---ifm-color-primary-darker: #e28d03;
---ifm-color-primary-darkest: #ba7402;
---ifm-color-primary-light: #fcad2c;
---ifm-color-primary-lighter: #fdb239;
---ifm-color-primary-lightest: #fdc261;
+:root {
+	--ifm-color-primary: #ba7402;
+	--ifm-color-primary-dark: #ef9603;
+	--ifm-color-primary-darker: #e28d03;
+	--ifm-color-primary-darkest: #ba7402;
+	--ifm-color-primary-light: #fcad2c;
+	--ifm-color-primary-lighter: #fdb239;
+	--ifm-color-primary-lightest: #fdc261;
 	--ifm-color-white: #fcfcfc;
 	--ifm-background-color: #fcfcfc;
+	--automerge-yellow: #fecb32;
+	--automerge-black: #131313;
+
+	--ifm-menu-color-background-active: var(--automerge-yellow);
+	--ifm-menu-color-active: var(--automerge-black);
 }
 
 .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.1);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
+	background-color: rgba(0, 0, 0, 0.1);
+	display: block;
+	margin: 0 calc(-1 * var(--ifm-pre-padding));
+	padding: 0 var(--ifm-pre-padding);
 }
 
 html[data-theme='dark'] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 
 html[data-theme='dark'] {
 	--ifm-color-primary: #fbcc34;
---ifm-color-primary-dark: #fac516;
---ifm-color-primary-darker: #fac107;
---ifm-color-primary-darkest: #d0a004;
---ifm-color-primary-light: #fcd352;
---ifm-color-primary-lighter: #fcd761;
---ifm-color-primary-lightest: #fde28d;
+	--ifm-color-primary-dark: #fac516;
+	--ifm-color-primary-darker: #fac107;
+	--ifm-color-primary-darkest: #d0a004;
+	--ifm-color-primary-light: #fcd352;
+	--ifm-color-primary-lighter: #fcd761;
+	--ifm-color-primary-lightest: #fde28d;
+}
+
+.button--primary {
+	background-color: var(--automerge-yellow);
+	color: var(--automerge-black);
+	border: 0;
+	outline: 2px black solid;
+	outline-offset: -5px;
+}
+
+.footer {
+	background-color: var(--ifm-navbar-background-color);
+}
+
+.hero .container {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+}
+
+.hero__title {
+	text-transform: uppercase;
+	font-size: 2rem;
+}
+
+.hero__subtitle {
+	max-width: 600px;
 }
