Change footer background color to match dark nav

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,3 +38,7 @@
 html[data-theme='dark'] .docusaurus-highlight-code-line {
 	background-color: rgba(0, 0, 0, 0.3);
 }
+
+.footer {
+	--ifm-footer-background-color: #242526;
+}
